added more test images; divided into raw/skeletonised folders; updated paths

--- a/Hough_transform/Hough_transform_raw_data.ipynb
+++ b/Hough_transform/Hough_transform_raw_data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "id": "3c590c63",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total files in dir: 6\n",
+      "Total files in dir: 9\n",
       "Total slices in stack: 8\n"
      ]
     },
@@ -45,11 +45,11 @@
    "source": [
     "# paths and filenames \n",
     "path = os.getcwd()\n",
-    "path_images = path + \"\\\\test_images\\\\\"\n",
+    "path_images = path + \"\\\\test_images\\\\straight_lines_raw\\\\\"\n",
     "file_names = os.listdir(path_images)\n",
     "print(\"Total files in dir: {0}\".format(len(file_names)))\n",
     "# read in the first image from the list of files\n",
-    "ret, image = cv2.imreadmulti(path_images+file_names[1], [], cv2.IMREAD_UNCHANGED)\n",
+    "ret, image = cv2.imreadmulti(path_images+file_names[0], [], cv2.IMREAD_UNCHANGED)\n",
     "print(\"Total slices in stack: {0}\".format(len(image)))\n",
     "img = image[0]\n",
     "plt.imshow(img, cmap=\"gray\");\n",
