--- a/Hough_transform/Hough_transform_skeletonised_data.ipynb
+++ b/Hough_transform/Hough_transform_skeletonised_data.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "# paths and filenames \n",
     "path = os.getcwd()\n",
-    "path_images = path + \"\\\\test_images\\\\\"\n",
+    "path_images = path + \"\\\\test_images\\\\straight_lines_skeletonised\\\\\"\n",
     "file_names = os.listdir(path_images)\n",
     "print(\"Total files in dir: {0}\".format(len(file_names)))"
    ]
