change dtype bool-->uint16 for skeletonised data augmentation

--- a/Unet/python_notebooks/augmentation.ipynb
+++ b/Unet/python_notebooks/augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "a30cac32",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "6ae42a76",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total test files:  88\n"
+      "Total test files:  8\n"
      ]
     },
     {
@@ -48,16 +48,16 @@
     "path = os.getcwd()\n",
     "path_test_images = path + \"\\\\test_images\\\\\"\n",
     "file_names_test = os.listdir(path_test_images)\n",
-    "print(\"Total test files:  {0}\".format(len(path_test_images)))\n",
+    "print(\"Total test files:  {0}\".format(len(file_names_test)))\n",
     "# read in an image form the test files \n",
-    "img = imread(path_images+file_names[3])\n",
+    "img = imread(path_test_images+file_names_test[3])\n",
     "plt.imshow(img, cmap=\"gray\");\n",
     "plt.axis(\"off\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "7e995d66",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "4f485f5e",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "04df7e80",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "ed707d38",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "7bb5fe81",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "0ec171dc",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "a8eab93c",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "b261c171",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "7f35a1c1",
    "metadata": {},
    "outputs": [
@@ -339,14 +339,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data augmented and saved.\n",
       "data augmented and saved.\n"
      ]
     }
    ],
    "source": [
-    "augment_and_save(file_names_raw, path_raw_ims, all_augmentations, dest_raw_ims, 'float32')\n",
-    "augment_and_save(file_names_skel, path_skel_ims, all_augmentations, dest_skel_ims, 'bool')"
+    "# augment raw images\n",
+    "augment_and_save(file_names_raw, path_raw_ims, all_augmentations, dest_raw_ims, 'float32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e82bccfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data augmented and saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# augment skeletonised images\n",
+    "augment_and_save(file_names_skel, path_skel_ims, all_augmentations, dest_skel_ims, 'uint16')"
    ]
   }
  ],
